--- a/bms/templates/bms/user_config/org_user_config.html
+++ b/bms/templates/bms/user_config/org_user_config.html
@@ -83,22 +83,8 @@
     }
 
     function AddUserDialog(init_title) {
-        $('#AddUserDialog').dialog({title:init_title,
-            width:650,
-            height:650,
-            buttons:[{
-				text:'保存',
-				handler:function(){
-				    AddUserEvent();
-				}
-			},{
-				text:'关闭',
-				handler:function(){
-				    $('#AddUserDialog').dialog('close')
-                }
-			}]
-        });
-        $('#AddUserDialog').dialog('open');
+        common_dialog($('#AddUserDialog'),init_title,650,650,true,AddUserEvent);
+
         ClearText();
     }
 
@@ -108,22 +94,8 @@
             $.messager.alert("友情提示", "请您先选择一行需要修改的数据");
             return false;
         }
-        $('#UpdateUserDialog').dialog({title:init_title,
-            width:650,
-            height:550,
-            buttons:[{
-				text:'保存',
-				handler:function(){
-				    UpdateUserEvent();
-				}
-			},{
-				text:'关闭',
-				handler:function(){
-				    $('#UpdateUserDialog').dialog('close')
-                }
-			}]
-        });
-        $('#UpdateUserDialog').dialog('open');
+        common_dialog($('#UpdateUserDialog'),init_title,650,550,true,UpdateUserEvent);
+
         var row = $('#UserGrid').datagrid('getSelected');
         if(row)
         {
@@ -161,32 +133,12 @@
                 mobile_phone: $("#UpdateUserForm #mobile_phone1").val(),
                 is_active: CBEnable
             };
-            var passurl='../bms/update_main_user';
-            $.ajax({
-                type: 'POST',
-                url: passurl,
-                cache: false,
-                data:postdata,
-                success: function (data) {
-                    if (data && data.success) {
-                        $.messager.show({
-                            title: '我的消息',
-                            msg: data.msg,
-                            timeout: 5000,
-                            showType: 'slide'
-                        });
-                        $('#UpdateUserDialog').dialog('close');
-                        $("#UserGrid").datagrid("reload");
-                    }
-                    else {
-                        alert("添加失败，请您重新检查");
-                    }
-                },
-                error: function (data) {
-                    $.messager.alert('错误', data.responseText);
-                }
-            });
+            var post_url='../bms/update_main_user';
 
+            common_ajax_post(post_url,postdata,true,function () {
+                    $('#UpdateUserDialog').dialog('close');
+                    $("#UserGrid").datagrid("reload");
+                 });
         }
 
     function ChangePwd() {
@@ -195,22 +147,9 @@
             $.messager.alert("友情提示", "请您先选择一行需要修改的数据");
             return false;
         }
-        $('#ChangePwdDialog').dialog({title:'修改密码',
-            width:550,
-            height:300,
-            buttons:[{
-				text:'保存',
-				handler:function(){
-				    ChangePwdEvent();
-				}
-			},{
-				text:'关闭',
-				handler:function(){
-				    $('#ChangePwdDialog').dialog('close')
-                }
-			}]
-        });
-        $('#ChangePwdDialog').dialog('open');
+
+        common_dialog($('#ChangePwdDialog'),'修改密码',550,300,true,ChangePwdEvent);
+
     }
     function ChangePwdEvent() {
             //验证所有的文本框是否通过用户的验证
@@ -236,33 +175,12 @@
                 id: userid,
                 password: $("#ChangePwdForm #password1").val(),
             };
-            var passurl='../bms/change_pwd_main_user';
-            $.ajax({
-                type: 'POST',
-                url: passurl,
-                cache: false,
-                {#headers: headers,#}
-                data:postdata,
-                success: function (data) {
-                    if (data && data.success) {
-                        $.messager.show({
-                            title: '我的消息',
-                            msg: data.msg,
-                            timeout: 5000,
-                            showType: 'slide'
-                        });
-                        $('#ChangePwdDialog').dialog('close');
-                        $("#UserGrid").datagrid("reload");
-                    }
-                    else {
-                        alert("添加失败，请您重新检查");
-                    }
-                },
-                error: function (data) {
-                    $.messager.alert('错误', data.responseText);
-                }
-            });
+            var post_url='../bms/change_pwd_main_user';
 
+            common_ajax_post(post_url,postdata,true,function () {
+                    $('#ChangePwdDialog').dialog('close');
+                    $("#UserGrid").datagrid("reload");
+                 });
         }
     function AddUserEvent() {
             //验证所有的文本框是否通过用户的验证
@@ -292,34 +210,12 @@
                 mobile_phone: $("#AddUserForm #mobile_phone").val(),
                 is_active: CBEnable
             };
-            var passurl='../bms/add_main_user';
-            $.ajax({
-                type: 'POST',
-                url: passurl,
-                cache: false,
-                {#headers: headers,#}
-                {#data: $('#AddUserForm').serialize(),#}
-                data:postdata,
-                success: function (data) {
-                    if (data && data.success) {
-                        $.messager.show({
-                            title: '我的消息',
-                            msg: data.msg,
-                            timeout: 5000,
-                            showType: 'slide'
-                        });
-                        $('#AddUserDialog').dialog('close');
-                        $("#UserGrid").datagrid("reload");
-                    }
-                    else {
-                        alert("添加失败，请您重新检查");
-                    }
-                },
-                error: function (data) {
-                    $.messager.alert('错误', data.responseText);
-                }
-            });
+            var post_url='../bms/add_main_user';
 
+            common_ajax_post(post_url,postdata,true,function () {
+                    $('#AddUserDialog').dialog('close');
+                    $("#UserGrid").datagrid("reload");
+                 });
         }
     function ClearText() {
         $('#AddUserForm').form('clear');
