--- a/bms/templates/bms/login.html
+++ b/bms/templates/bms/login.html
@@ -18,8 +18,8 @@
             data: {csrfmiddlewaretoken: '{{ csrf_token }}'},
         });
     </script>
+    <script src="{% static 'js_shortcuts.js' %}"></script>
 </head>
-
 <body>
 <div class="limiter">
 		<div class="container-login100" style="background-image: url('{% static 'login/images/bg-01.jpg' %}');">
@@ -54,50 +54,6 @@
 			</div>
 		</div>
 	</div>
-
-
-{#<div class="container">#}
-{#    <form class="form-signin" id="loginForm">#}
-{#        <div class="form-signin-heading text-center">#}
-{#            <h1 class="sign-title">广州金艮云平台</h1>#}
-{#            <img src="{% static 'AdminEx/images/login-logo.png' %}" alt=""/>#}
-{#        </div>#}
-{#        <div class="login-wrap">#}
-{#            <input type="text" id="username" class="form-control" placeholder="用户名" autofocus>#}
-{#            <input type="password" id="password" class="form-control" placeholder="密  码">#}
-{##}
-{#            <button id="loginbtn" class="btn btn-lg btn-login btn-block" type="button">#}
-{#                <i class="fa fa-check">登陆</i>#}
-{#            </button>#}
-{#        </div>#}
-{##}
-{#        <!-- Modal -->#}
-{#        <div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="myModal"#}
-{#             class="modal fade">#}
-{#            <div class="modal-dialog">#}
-{#                <div class="modal-content">#}
-{#                    <div class="modal-header">#}
-{#                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>#}
-{#                        <h4 class="modal-title">Forgot Password ?</h4>#}
-{#                    </div>#}
-{#                    <div class="modal-body">#}
-{#                        <p>Enter your e-mail address below to reset your password.</p>#}
-{#                        <input type="text" name="email" placeholder="Email" autocomplete="off"#}
-{#                               class="form-control placeholder-no-fix">#}
-{##}
-{#                    </div>#}
-{#                    <div class="modal-footer">#}
-{#                        <button data-dismiss="modal" class="btn btn-default" type="button">Cancel</button>#}
-{#                        <button class="btn btn-primary" type="button">Submit</button>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#        <!-- modal -->#}
-{##}
-{#    </form>#}
-{##}
-{#</div>#}
 <script src="{% static 'InsdepUI/jquery.easyui.min.js' %}"></script>
 <script src="{% static 'login/js/main.js'%}"></script>
 <script>
@@ -115,25 +71,11 @@
                 username: $("#username").val(),
                 password: $("#password").val()
             };
-            $.ajax({
-                method: "POST",
-                url: '/bms/login_check',
-                cache: false,
-                data: postdata,
-                success: function (data) {
-
-                    if (data && data.success) {
-                        window.location.href = "/bms/index";
-                    } else {
-                        $.messager.alert("提示", data.msg);
-
-                    }
-                },
-                error: function (data) {
-
-                    $.messager.alert('错误', data.responseText);
-                }
+            var passurl='/bms/login_check';
+            common_ajax_post(passurl,postdata,false,function () {
+                window.location.href = "/bms/index";
             });
+
         });
     });
 </script>
